--- a/codigo/Home.html
+++ b/codigo/Home.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <link rel="stylesheet" href="/css/homestyle.css">
+    <title>Megalodon Store - Página Inicial</title>
+    <link rel="stylesheet" href="/css/style.css">
     <script src="https://kit.fontawesome.com/efa30bb216.js" crossorigin="anonymous"></script>
 </head>
 
@@ -70,13 +70,14 @@
     </div>
 </body>
 
-<div class="social">
+
+
+<footer>
+    <div class="social">
     <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
     <a href="#"><i class="fa-brands fa-instagram"></i></a>
     <a href="#"><i class="fa-brands fa-twitter"></i></a>
     <a href="#"><i class="fa-solid fa-envelope"></i></a>
 </div>
-
-<footer>
 </footer>
 </html>
