--- a/codigo/Home.html
+++ b/codigo/Home.html
@@ -37,19 +37,22 @@
         </ul>
     </div>
 
-    <a href="Home.html" class="logo">
-        <picture>
-            <source media="(min-width: 1000px)" srcset="/img/logo-small.png">
-            <img src="/img/logo-simple.png" alt="logo">
-        </picture>
-    </a>
+    <div class="logo">
+        <a href="Home.html">
+            <picture>
+                <source media="(min-width: 1000px)" srcset="/img/logo-small.png">
+                <img src="/img/logo-simple.png" alt="logo">
+            </picture>
+        </a>
+    </div>
+        
 
     <div class="profile">
         <a href="#"><i class="fa-solid fa-user"></i></a>
     </div>
 
     <div class="fav">
-        <a href="#"><i class="fa-solid fa-heart"></i></a>
+        <a href="../codigo/Favorites.html"><i class="fa-solid fa-heart"></i></a>
     </div>
 
     <div class="cart">
