--- a/codigo/Register_form.html
+++ b/codigo/Register_form.html
@@ -5,8 +5,139 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Megalodon Store - Entrar</title>
+    <link rel="stylesheet" href="/css/Header+Footer.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <script src="https://kit.fontawesome.com/efa30bb216.js" crossorigin="anonymous"></script>
 </head>
+
+<header>
+    <div class="dropdown">
+        <button class="menu-button"><a href="#"><i class="fa-solid fa-bars"></i></a></button>
+        <ul class="menu">
+            <li><a href="#">Placas de Vídeo</a></li>
+            <li><a href="#">Memória RAM</a></li>
+            <li><a href="#">Processadores</a>
+                <ul class="sub-menu">
+                    <li><a href="#">AMD</a></li>
+                    <li><a href="#">Intel</a>
+                        <ul class="sub-menu-2">
+                            <li><a href="#">Core i3</a></li>
+                            <li><a href="#">Core i5</a></li>
+                            <li><a href="#">Core i7</a></li>
+                            <li><a href="#">Core i9</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </li>
+            <li><a href="#">Armazenamento</a>
+                <ul class="sub-menu">
+                    <li><a href="#">SSD</a></li>
+                    <li><a href="#">Hard Drive</a></li>
+                    <li><a href="#">Flashdrive</a>
+                        <ul class="sub-menu-2">
+                            <li><a href="#">4GB</a></li>
+                            <li><a href="#">8GB</a></li>
+                            <li><a href="#">16GB</a></li>
+                            <li><a href="#">32GB</a></li>
+                            <li><a href="#">64GB</a></li>
+                            <li><a href="#">128GB</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </li>
+            <li><a href="#">Fontes</a>
+                <ul class="sub-menu">
+                    <li><a href="#">Notebook</a></li>
+                    <li><a href="#">Desktop</a></li>
+                </ul>
+            </li>
+        </ul>
+    </div>
+
+    <div class="logo">
+        <a href="Home.html">
+            <picture>
+                <source media="(min-width: 1000px)" srcset="/img/logo-small.png">
+                <img src="/img/logo-simple.png" alt="logo">
+            </picture>
+        </a>
+    </div>
+        
+
+    <div class="profile">
+        <a href="/codigo/Register_form.html"><i class="fa-solid fa-user"></i></a>
+    </div>
+    <div class="fav">
+        <a href="../codigo/Favorites.html"><i class="fa-solid fa-heart"></i></a>
+    </div>
+    <div class="cart">
+        <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+    </div>
+    <form action="#" class="search-bar">   
+        <input type="text" placeholder="    Pesquisar..." name="search">
+        <button type="submit"><i class="fa fa-search"></i></button>
+    </form>
+</header>
+
+<nav>
+    <ul class="menu-2">
+        <li><a href="#">Placas de Vídeo</a></li>
+        <li><a href="#">Memória RAM</a></li>
+        <li><a href="#">Processadores</a>
+            <ul class="sub-menu-2">
+                <li><a href="#">AMD</a></li>
+                <li><a href="#">Intel</a>
+                    <ul class="sub-menu-2">
+                        <li><a href="#">Core i3</a></li>
+                        <li><a href="#">Core i5</a></li>
+                        <li><a href="#">Core i7</a></li>
+                        <li><a href="#">Core i9</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </li>
+        <li><a href="#">Armazenamento</a>
+            <ul class="sub-menu-2">
+                <li><a href="#">SSD</a></li>
+                <li><a href="#">Hard Drive</a></li>
+                <li><a href="#">Flashdrive</a>
+                    <ul class="sub-menu-2">
+                        <li><a href="#">4GB</a></li>
+                        <li><a href="#">8GB</a></li>
+                        <li><a href="#">16GB</a></li>
+                        <li><a href="#">32GB</a></li>
+                        <li><a href="#">64GB</a></li>
+                        <li><a href="#">128GB</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </li>
+        <li><a href="#">Fontes</a>
+            <ul class="sub-menu-2">
+                <li><a href="#">Notebook</a></li>
+                <li><a href="#">Desktop</a></li>
+            </ul>
+        </li>
+    </ul>
+</nav>
+
 <body>
-    
+
 </body>
+
+<footer>
+    <div class="social">
+    <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
+    <a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+    <a href="https://twitter.com/home?lang=pt" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+    <a href="#" target="_blank"><i class="fa-solid fa-envelope"></i></a>
+    </div>
+    <div class="info_footer">
+        <p>Megalodon PC Hardware & Accessories</p>
+        <p>Horário de atendimento</p>
+        <p>De segunda a sexta das 8:30 às 12H / 13H às 18H</p>
+        <p>Loja apenas E-commerce</p>
+        <p>CNPJ: 00.000.000/0000-00 | Santa Maria-RS</p>
+    </div>
+</footer>
 </html>
