--- a/codigo/Category_Ofertas.html
+++ b/codigo/Category_Ofertas.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Megalodon Store - Meus Favoritos</title>
+    <title>Megalodon Store - Ofertas</title>
     <link rel="stylesheet" href="/css/Header+Footer.css">
     <link rel="stylesheet" href="/css/style.css">
     <script src="https://kit.fontawesome.com/efa30bb216.js" crossorigin="anonymous"></script>
