--- a/codigo/Home.html
+++ b/codigo/Home.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Megalodon Store - Página Inicial</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/Header+Footer.css">
+    <link rel="stylesheet" href="/css/style_home.css">
     <script src="https://kit.fontawesome.com/efa30bb216.js" crossorigin="anonymous"></script>
 </head>
 
@@ -14,18 +15,34 @@
         <button class="menu-button"><a href="#"><i class="fa-solid fa-bars"></i></a></button>
         <ul class="menu">
             <li><a href="#">Placas de Vídeo</a></li>
-            <li><a href="#">Meméria RAM</a></li>
+            <li><a href="#">Memória RAM</a></li>
             <li><a href="#">Processadores</a>
                 <ul class="sub-menu">
                     <li><a href="#">AMD</a></li>
-                    <li><a href="#">Intel</a></li>
+                    <li><a href="#">Intel</a>
+                        <ul class="sub-menu-2">
+                            <li><a href="#">Core i3</a></li>
+                            <li><a href="#">Core i5</a></li>
+                            <li><a href="#">Core i7</a></li>
+                            <li><a href="#">Core i9</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </li>
             <li><a href="#">Armazenamento</a>
                 <ul class="sub-menu">
                     <li><a href="#">SSD</a></li>
                     <li><a href="#">Hard Drive</a></li>
-                    <li><a href="#">Flashdrive</a></li>
+                    <li><a href="#">Flashdrive</a>
+                        <ul class="sub-menu-2">
+                            <li><a href="#">4GB</a></li>
+                            <li><a href="#">8GB</a></li>
+                            <li><a href="#">16GB</a></li>
+                            <li><a href="#">32GB</a></li>
+                            <li><a href="#">64GB</a></li>
+                            <li><a href="#">128GB</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </li>
             <li><a href="#">Fontes</a>
@@ -48,7 +65,7 @@
         
 
     <div class="profile">
-        <a href="#"><i class="fa-solid fa-user"></i></a>
+        <a href="/codigo/Register_form.html"><i class="fa-solid fa-user"></i></a>
     </div>
 
     <div class="fav">
@@ -68,18 +85,34 @@
 <nav>
     <ul class="menu-2">
         <li><a href="#">Placas de Vídeo</a></li>
-        <li><a href="#">Meméria RAM</a></li>
+        <li><a href="#">Memória RAM</a></li>
         <li><a href="#">Processadores</a>
             <ul class="sub-menu-2">
                 <li><a href="#">AMD</a></li>
-                <li><a href="#">Intel</a></li>
+                <li><a href="#">Intel</a>
+                    <ul class="sub-menu-2">
+                        <li><a href="#">Core i3</a></li>
+                        <li><a href="#">Core i5</a></li>
+                        <li><a href="#">Core i7</a></li>
+                        <li><a href="#">Core i9</a></li>
+                    </ul>
+                </li>
             </ul>
         </li>
         <li><a href="#">Armazenamento</a>
             <ul class="sub-menu-2">
                 <li><a href="#">SSD</a></li>
                 <li><a href="#">Hard Drive</a></li>
-                <li><a href="#">Flashdrive</a></li>
+                <li><a href="#">Flashdrive</a>
+                    <ul class="sub-menu-2">
+                        <li><a href="#">4GB</a></li>
+                        <li><a href="#">8GB</a></li>
+                        <li><a href="#">16GB</a></li>
+                        <li><a href="#">32GB</a></li>
+                        <li><a href="#">64GB</a></li>
+                        <li><a href="#">128GB</a></li>
+                    </ul>
+                </li>
             </ul>
         </li>
         <li><a href="#">Fontes</a>
@@ -93,86 +126,95 @@
 
 <body>
     <div class="main">
-        <picture class="banner-principal">
-                <source media="(min-width: 1000px)" srcset="/img/banner-big.png">
-                <img src="/img/banner.png" alt="Banner">
-        </picture>
+        <a href="/codigo/Category_Ofertas.html" class="banner-principal">
+                <picture>
+                    <source media="(min-width: 1000px)" srcset="/img/banner-big.png">
+                    <img src="/img/banner.png" alt="Banner">
+                </picture>
+        </a>
 
         <div class="title">
             <p>Categorias</p>
+        </div>
+        
+        <div class="categorias">
+            <a href="/codigo/Category_Ofertas.html" class="link-categoria">
+                <div class="botao-categoria">
+                    <img src="/img/category-icon.png" alt=""> <p>
+                    Ofertas
+                </div>
+            </a>
+            <a href="#" class="link-categoria">
+                <div class="botao-categoria">
+                    <img src="/img/category-icon.png" alt=""> <p>
+                    Lançamentos
+                </div>
+            </a>
+            <a href="#" class="link-categoria">
+                <div class="botao-categoria">
+                    <img src="/img/category-icon.png" alt=""> <p>
+                    Mais Vendidos
+                </div>
+            </a>
+            <a href="#" class="link-categoria">
+                <div class="botao-categoria">
+                    <img src="/img/category-icon.png" alt=""> <p>
+                    Pacotes de Produtos
+                </div>
+            </a>
+            <a href="#" class="link-categoria">
+                <div class="botao-categoria">
+                    <img src="/img/category-icon.png" alt=""> <p>
+                    Serviços de Manutenção
+                </div>
+            </a>
+            <a href="#" class="link-categoria">
+                <div class="botao-categoria">
+                    <img src="/img/category-icon.png" alt=""> <p>
+                    Monte seu PC
+                </div>
+            </a>
+        </div>
+
+        <div class="title">
+            <p>Marcas</p>
         </div>
 
         <div class="categorias">
             <a href="#" class="link-categoria">
                 <div class="botao-categoria">
                     <img src="/img/category-icon.png" alt=""> <p>
-                    Lançamentos
+                    AMD
                 </div>
             </a>
             <a href="#" class="link-categoria">
                 <div class="botao-categoria">
                     <img src="/img/category-icon.png" alt=""> <p>
-                    Mais Vendidos
-                </div>
-            </a>
-            <a href="/codigo/Category_1.html" class="link-categoria">
-                <div class="botao-categoria">
-                    <img src="/img/category-icon.png" alt=""> <p>
-                    Ofertas
+                    NVIDIA
                 </div>
             </a>
             <a href="#" class="link-categoria">
                 <div class="botao-categoria">
                     <img src="/img/category-icon.png" alt=""> <p>
-                    Pacotes de Produtos
+                    Intel
                 </div>
             </a>
             <a href="#" class="link-categoria">
                 <div class="botao-categoria">
                     <img src="/img/category-icon.png" alt=""> <p>
-                    Serviços de Manutenção
+                    Asus
                 </div>
             </a>
             <a href="#" class="link-categoria">
                 <div class="botao-categoria">
                     <img src="/img/category-icon.png" alt=""> <p>
-                    Monte seu PC
+                    Gygabyte
                 </div>
             </a>
             <a href="#" class="link-categoria">
                 <div class="botao-categoria">
                     <img src="/img/category-icon.png" alt=""> <p>
-                    Lançamentos
-                </div>
-            </a>
-            <a href="#" class="link-categoria">
-                <div class="botao-categoria">
-                    <img src="/img/category-icon.png" alt=""> <p>
-                    Mais Vendidos
-                </div>
-            </a>
-            <a href="/codigo/Category_1.html" class="link-categoria">
-                <div class="botao-categoria">
-                    <img src="/img/category-icon.png" alt=""> <p>
-                    Ofertas
-                </div>
-            </a>
-            <a href="#" class="link-categoria">
-                <div class="botao-categoria">
-                    <img src="/img/category-icon.png" alt=""> <p>
-                    Pacotes de Produtos
-                </div>
-            </a>
-            <a href="#" class="link-categoria">
-                <div class="botao-categoria">
-                    <img src="/img/category-icon.png" alt=""> <p>
-                    Serviços de Manutenção
-                </div>
-            </a>
-            <a href="#" class="link-categoria">
-                <div class="botao-categoria">
-                    <img src="/img/category-icon.png" alt=""> <p>
-                    Monte seu PC
+                    Redragon
                 </div>
             </a>
         </div>
@@ -185,6 +227,15 @@
     <a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
     <a href="https://twitter.com/home?lang=pt" target="_blank"><i class="fa-brands fa-twitter"></i></a>
     <a href="#" target="_blank"><i class="fa-solid fa-envelope"></i></a>
-</div>
+    </div>
+    <div class="info_footer">
+        <p>Megalodon PC Hardware & Accessories</p>
+        <p>Horário de atendimento</p>
+        <p>De segunda a sexta das 8:30 às 12H / 13H às 18H</p>
+        <p>Loja apenas E-commerce</p>
+        <p>CNPJ: 00.000.000/0000-00 | Santa Maria-RS</p>
+
+    </div>
+
 </footer>
 </html>
