--- a/codigo/Home.html
+++ b/codigo/Home.html
@@ -134,7 +134,7 @@
         </a>
 
         <div class="title">
-            <p>Categorias</p>
+            <h1>Categorias</h1>
         </div>
         
         <div class="categorias">
@@ -177,7 +177,7 @@
         </div>
 
         <div class="title">
-            <p>Marcas</p>
+            <h1>Marcas</h1>
         </div>
 
         <div class="categorias">
