--- a/codigo/Favorites.html
+++ b/codigo/Favorites.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Megalodon Store - Meus Favoritos</title>
     <link rel="stylesheet" href="/css/Header+Footer.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/style_favorites.css">
     <script src="https://kit.fontawesome.com/efa30bb216.js" crossorigin="anonymous"></script>
 </head>
 
@@ -122,7 +122,109 @@
 </nav>
 
 <body>
-
+    <h1>Favoritos</h1>
+    <div class="produtos">
+        <div class="produto_card">
+            <a href="/codigo/Product_page.html" class="produto_link">
+                <img src="/img/foto-produto.png" alt="Foto Produto">
+                <h2 class="produto_nome">Nome Produto</h2>
+                <h2 class="produto_preco">R$00,00</h2>
+            </a>
+            <a href="#" class="produto_botao">
+                <h2>Adicionar ao Carrinho</h2>
+            </a>
+        </div>
+        <div class="produto_card">
+            <a href="/codigo/Product_page.html" class="produto_link">
+                <img src="/img/foto-produto.png" alt="Foto Produto">
+                <h2 class="produto_nome">Nome Produto</h2>
+                <h2 class="produto_preco">R$00,00</h2>
+            </a>
+            <a href="#" class="produto_botao">
+                <h2>Adicionar ao Carrinho</h2>
+            </a>
+        </div>
+        <div class="produto_card">
+            <a href="/codigo/Product_page.html" class="produto_link">
+                <img src="/img/foto-produto.png" alt="Foto Produto">
+                <h2 class="produto_nome">Nome Produto</h2>
+                <h2 class="produto_preco">R$00,00</h2>
+            </a>
+            <a href="#" class="produto_botao">
+                <h2>Adicionar ao Carrinho</h2>
+            </a>
+        </div>
+        <div class="produto_card">
+            <a href="/codigo/Product_page.html" class="produto_link">
+                <img src="/img/foto-produto.png" alt="Foto Produto">
+                <h2 class="produto_nome">Nome Produto</h2>
+                <h2 class="produto_preco">R$00,00</h2>
+            </a>
+            <a href="#" class="produto_botao">
+                <h2>Adicionar ao Carrinho</h2>
+            </a>
+        </div>
+        <div class="produto_card">
+            <a href="/codigo/Product_page.html" class="produto_link">
+                <img src="/img/foto-produto.png" alt="Foto Produto">
+                <h2 class="produto_nome">Nome Produto</h2>
+                <h2 class="produto_preco">R$00,00</h2>
+            </a>
+            <a href="#" class="produto_botao">
+                <h2>Adicionar ao Carrinho</h2>
+            </a>
+        </div>
+        <div class="produto_card">
+            <a href="/codigo/Product_page.html" class="produto_link">
+                <img src="/img/foto-produto.png" alt="Foto Produto">
+                <h2 class="produto_nome">Nome Produto</h2>
+                <h2 class="produto_preco">R$00,00</h2>
+            </a>
+            <a href="#" class="produto_botao">
+                <h2>Adicionar ao Carrinho</h2>
+            </a>
+        </div>
+        <div class="produto_card">
+            <a href="/codigo/Product_page.html" class="produto_link">
+                <img src="/img/foto-produto.png" alt="Foto Produto">
+                <h2 class="produto_nome">Nome Produto</h2>
+                <h2 class="produto_preco">R$00,00</h2>
+            </a>
+            <a href="#" class="produto_botao">
+                <h2>Adicionar ao Carrinho</h2>
+            </a>
+        </div>
+        <div class="produto_card">
+            <a href="/codigo/Product_page.html" class="produto_link">
+                <img src="/img/foto-produto.png" alt="Foto Produto">
+                <h2 class="produto_nome">Nome Produto</h2>
+                <h2 class="produto_preco">R$00,00</h2>
+            </a>
+            <a href="#" class="produto_botao">
+                <h2>Adicionar ao Carrinho</h2>
+            </a>
+        </div>
+        <div class="produto_card">
+            <a href="/codigo/Product_page.html" class="produto_link">
+                <img src="/img/foto-produto.png" alt="Foto Produto">
+                <h2 class="produto_nome">Nome Produto</h2>
+                <h2 class="produto_preco">R$00,00</h2>
+            </a>
+            <a href="#" class="produto_botao">
+                <h2>Adicionar ao Carrinho</h2>
+            </a>
+        </div>
+        <div class="produto_card">
+            <a href="/codigo/Product_page.html" class="produto_link">
+                <img src="/img/foto-produto.png" alt="Foto Produto">
+                <h2 class="produto_nome">Nome Produto</h2>
+                <h2 class="produto_preco">R$00,00</h2>
+            </a>
+            <a href="#" class="produto_botao">
+                <h2>Adicionar ao Carrinho</h2>
+            </a>
+        </div>
+    </div>
 </body>
 
 <footer>
