--- a/codigo/Product_page.html
+++ b/codigo/Product_page.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Megalodon Store - Mouse Gamer</title>
     <link rel="stylesheet" href="/css/Header+Footer.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/style_product_page.css">
     <script src="https://kit.fontawesome.com/efa30bb216.js" crossorigin="anonymous"></script>
 </head>
 
@@ -122,7 +122,30 @@
 </nav>
 
 <body>
-
+    <div class="desc_page">
+        <div class="desc_nome">
+            <h1>Nome Produto</h1>
+        </div>
+        <div class="desc_img">
+            <img src="/img/foto-produto-large.png" alt="Produto">
+        </div>
+        <div class="desc_preco">
+            <h1>R$00,00</h1>
+        </div>
+        <div class="desc_favoritos">
+            <button><i class="fa-solid fa-heart-circle-plus"></i><h2>Adicionar aos Favoritos</h2></button>
+        </div>
+        <div class="desc_comprar">
+            <button><i class="fa-solid fa-cart-plus"></i><h2>Adicionar ao Carrinho</h2></button>
+        </div>
+        <div class="desc_desc">
+            <h2>Lorem ipsum dolor sit amet, consectetur adipisicing
+                elit. Iusto debitis rerum ipsum nobis culpa nesciunt
+                iste unde illo quisquam? Minus at quisquam facere quis
+                ab vel omnis alias cupiditate aliquam.
+            </h2>
+        </div>
+    </div>
 </body>
 
 <footer>
