--- a/codigo/Product_page.html
+++ b/codigo/Product_page.html
@@ -125,12 +125,15 @@
     <div class="desc_page">
         <div class="desc_nome">
             <h1>Nome Produto</h1>
+            <h2>Porduto Novo!</h2>
+            <h2>Estoque: 243</h2>
         </div>
         <div class="desc_img">
             <img src="/img/foto-produto-large.png" alt="Produto">
         </div>
         <div class="desc_preco">
             <h1>R$00,00</h1>
+            <h3>à vista com 15% de desconto no boleto ou pix</h3>
         </div>
         <div class="desc_favoritos">
             <button><i class="fa-solid fa-heart-circle-plus"></i><h2>Adicionar aos Favoritos</h2></button>
