--- a/codigo/Register_form.html
+++ b/codigo/Register_form.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Megalodon Store - Entrar</title>
     <link rel="stylesheet" href="/css/Header+Footer.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/style_register.css">
     <script src="https://kit.fontawesome.com/efa30bb216.js" crossorigin="anonymous"></script>
 </head>
 
@@ -122,7 +122,49 @@
 </nav>
 
 <body>
+    <div class="container">
+        <div class="form_title">
+            <h1>Cadastro</h1>
+        </div>
+        <form action="" class="formulario">
+            <fieldset class="dados_pessoais">
+                <legend>Dados Pessoais</legend>
 
+                <label for="nome" class="nome">Nome Completo</label>
+                <input type="text" id="nome" required placeholder="Ex.: João Silva">
+
+                <label for="data" class="data">Data de Nascimento</label>
+                <input type="date" id="data" required placeholder="">
+
+                <label for="cpf" class="cpf">CPF</label>
+                <input type="number" id="cpf" required placeholder="000.000.000-00" pattern="^[0-9]{3}.[0-9]{3}.[0-9]{3}-[0-9]{2}$">
+
+                <label for="email" class="email">E-mail</label>
+                <input type="email" id="email" required placeholder="seu@email.com">
+                
+                <label for="estado" class="estado">Estado</label>
+                <select id="estado" required>
+                    <option value="default" selected>--</option>
+                    <option value="RS">RS</option>
+                    <option value="SP">SP</option>
+                    <option value="RJ">RJ</option>
+                    <option value="SC">SC</option>
+                    <option value="RO">RO</option>
+
+                </select>
+
+                <label for="senha" class="senha">Senha</label>
+                <input type="password" id="senha" required pattern=".{8,}" title="Digite 8 ou mais caracteres" placeholder="********">
+
+                <label for="confirmar_senha" class="confirmar_senha">Confirmar Senha</label>
+                <input type="password" id="confirmar_senha" required pattern=".{8,}" title="Digite 8 ou mais caracteres" placeholder="********">
+                
+                <input type="submit" value="Confirmar" id="confirm">
+
+                <input type="reset" value="Apagar Tudo" id="reset">
+            </fieldset>
+        </form>
+    </div>
 </body>
 
 <footer>
