--- a/codigo/Home.html
+++ b/codigo/Home.html
@@ -14,13 +14,14 @@
     <div class="dropdown">
         <button class="menu-button"><a href="#"><i class="fa-solid fa-bars"></i></a></button>
         <ul class="menu">
+            <li><a href="/codigo/Favorites.html"><i class="fa-solid fa-heart"></i>  Favoritos</a></li>
             <li><a href="#">Placas de Vídeo</a></li>
             <li><a href="#">Memória RAM</a></li>
             <li><a href="#">Processadores</a>
                 <ul class="sub-menu">
                     <li><a href="#">AMD</a></li>
                     <li><a href="#">Intel</a>
-                        <ul class="sub-menu-2">
+                        <ul class="sub-menu">
                             <li><a href="#">Core i3</a></li>
                             <li><a href="#">Core i5</a></li>
                             <li><a href="#">Core i7</a></li>
@@ -34,7 +35,7 @@
                     <li><a href="#">SSD</a></li>
                     <li><a href="#">Hard Drive</a></li>
                     <li><a href="#">Flashdrive</a>
-                        <ul class="sub-menu-2">
+                        <ul class="sub-menu">
                             <li><a href="#">4GB</a></li>
                             <li><a href="#">8GB</a></li>
                             <li><a href="#">16GB</a></li>
@@ -61,19 +62,19 @@
                 <img src="/img/logo-simple.png" alt="logo">
             </picture>
         </a>
-    </div>
-        
+    </div>    
 
     <div class="profile">
         <a href="/codigo/Register_form.html"><i class="fa-solid fa-user"></i></a>
     </div>
-
     <div class="fav">
-        <a href="../codigo/Favorites.html"><i class="fa-solid fa-heart"></i></a>
+        <a href="/codigo/Favorites.html"><i class="fa-solid fa-heart"></i></a>
     </div>
-
     <div class="cart">
         <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+    </div>
+    <div class="help">
+        <a href="/codigo/info.html"><i class="fa-solid fa-circle-info"></i></a>
     </div>
 
     <form action="#" class="search-bar">   
