--- a/codigo/info.html
+++ b/codigo/info.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Megalodon Store - Meus Favoritos</title>
+    <title>Megalodon Store - Página Inicial</title>
     <link rel="stylesheet" href="/css/Header+Footer.css">
-    <link rel="stylesheet" href="/css/style_favorites.css">
+    <link rel="stylesheet" href="/css/style_info.css">
     <script src="https://kit.fontawesome.com/efa30bb216.js" crossorigin="anonymous"></script>
 </head>
 
@@ -126,107 +126,36 @@
 </nav>
 
 <body>
-    <h1>Favoritos</h1>
-    <div class="produtos">
-        <div class="produto_card">
-            <a href="/codigo/Product_page.html" class="produto_link">
-                <img src="/img/foto-produto.png" alt="Foto Produto">
-                <h2 class="produto_nome">Nome Produto</h2>
-                <h2 class="produto_preco">R$00,00</h2>
-            </a>
-            <a href="#" class="produto_botao">
-                <h2>Adicionar ao Carrinho</h2>
-            </a>
+    <div class="info_page">
+        <div class="busca_info">
+            
         </div>
-        <div class="produto_card">
-            <a href="/codigo/Product_page.html" class="produto_link">
-                <img src="/img/foto-produto.png" alt="Foto Produto">
-                <h2 class="produto_nome">Nome Produto</h2>
-                <h2 class="produto_preco">R$00,00</h2>
-            </a>
-            <a href="#" class="produto_botao">
-                <h2>Adicionar ao Carrinho</h2>
-            </a>
-        </div>
-        <div class="produto_card">
-            <a href="/codigo/Product_page.html" class="produto_link">
-                <img src="/img/foto-produto.png" alt="Foto Produto">
-                <h2 class="produto_nome">Nome Produto</h2>
-                <h2 class="produto_preco">R$00,00</h2>
-            </a>
-            <a href="#" class="produto_botao">
-                <h2>Adicionar ao Carrinho</h2>
-            </a>
-        </div>
-        <div class="produto_card">
-            <a href="/codigo/Product_page.html" class="produto_link">
-                <img src="/img/foto-produto.png" alt="Foto Produto">
-                <h2 class="produto_nome">Nome Produto</h2>
-                <h2 class="produto_preco">R$00,00</h2>
-            </a>
-            <a href="#" class="produto_botao">
-                <h2>Adicionar ao Carrinho</h2>
-            </a>
-        </div>
-        <div class="produto_card">
-            <a href="/codigo/Product_page.html" class="produto_link">
-                <img src="/img/foto-produto.png" alt="Foto Produto">
-                <h2 class="produto_nome">Nome Produto</h2>
-                <h2 class="produto_preco">R$00,00</h2>
-            </a>
-            <a href="#" class="produto_botao">
-                <h2>Adicionar ao Carrinho</h2>
-            </a>
-        </div>
-        <div class="produto_card">
-            <a href="/codigo/Product_page.html" class="produto_link">
-                <img src="/img/foto-produto.png" alt="Foto Produto">
-                <h2 class="produto_nome">Nome Produto</h2>
-                <h2 class="produto_preco">R$00,00</h2>
-            </a>
-            <a href="#" class="produto_botao">
-                <h2>Adicionar ao Carrinho</h2>
-            </a>
-        </div>
-        <div class="produto_card">
-            <a href="/codigo/Product_page.html" class="produto_link">
-                <img src="/img/foto-produto.png" alt="Foto Produto">
-                <h2 class="produto_nome">Nome Produto</h2>
-                <h2 class="produto_preco">R$00,00</h2>
-            </a>
-            <a href="#" class="produto_botao">
-                <h2>Adicionar ao Carrinho</h2>
-            </a>
-        </div>
-        <div class="produto_card">
-            <a href="/codigo/Product_page.html" class="produto_link">
-                <img src="/img/foto-produto.png" alt="Foto Produto">
-                <h2 class="produto_nome">Nome Produto</h2>
-                <h2 class="produto_preco">R$00,00</h2>
-            </a>
-            <a href="#" class="produto_botao">
-                <h2>Adicionar ao Carrinho</h2>
-            </a>
-        </div>
-        <div class="produto_card">
-            <a href="/codigo/Product_page.html" class="produto_link">
-                <img src="/img/foto-produto.png" alt="Foto Produto">
-                <h2 class="produto_nome">Nome Produto</h2>
-                <h2 class="produto_preco">R$00,00</h2>
-            </a>
-            <a href="#" class="produto_botao">
-                <h2>Adicionar ao Carrinho</h2>
-            </a>
-        </div>
-        <div class="produto_card">
-            <a href="/codigo/Product_page.html" class="produto_link">
-                <img src="/img/foto-produto.png" alt="Foto Produto">
-                <h2 class="produto_nome">Nome Produto</h2>
-                <h2 class="produto_preco">R$00,00</h2>
-            </a>
-            <a href="#" class="produto_botao">
-                <h2>Adicionar ao Carrinho</h2>
-            </a>
+        <div class="faq">
+            <ul>pergunta
+                <li>
+                    resposta
+                </li>
+            </ul>
+            <ul>pergunta
+                <li>
+                    resposta
+                </li>
+            </ul>
+            <ul>pergunta
+                <li>
+                    resposta
+                </li>
+            </ul>
+            <ul>pergunta
+                <li>
+                    resposta
+                </li>
+            </ul>
+            <ul>pergunta
+                <li>
+                    resposta
+                </li>
+            </ul>
         </div>
     </div>
 </body>
